2012-01-17  Glenn Morris  <rgm@gnu.org>

	* isearch.el (search-nonincremental-instead): Fix doc typo.

	* dired.el (dired-insert-directory): Handle newlines in directory name.
	(dired-build-subdir-alist): Unescape newlines in directory name.

2012-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-local-end-of-line): New defcustom.
	(tramp-action-login, tramp-action-yesno, tramp-action-yn)
	(tramp-action-terminal): Use it.  (Bug#10530)

2012-01-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--replace): Strip properties (bug#10062).

2012-01-16  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-state-ignored-parameters): Remove variable.
	(window--state-get-1): Rename argument MARKERS to IGNORE.
	Handle persistent window parameters.  Make copy of clone-of
	parameter only if requested.  (Bug#10348)
	(window--state-put-2): Install a window parameter only if it has
	a non-nil value or an existing parameter shall be overwritten.

2012-01-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-remote-path): Set tramp-autoload cookie.

2012-01-14  Eli Zaretskii  <eliz@gnu.org>

	* info.el (Info-toc-build): If the Info file has no "Up" pointer,
	don't pass the (nil) value of `upnode' to string-match.

2012-01-14  Chong Yidong  <cyd@gnu.org>

	* startup.el (command-line): Fix X resource class for cursorColor.
	Fix values recognized by the cursorBlink resource.

2012-01-14  Paul Eggert  <eggert@cs.ucla.edu>

	* epg.el (epg--make-temp-file): Avoid permission race condition
	when running on old Emacs versions (bug#10403).

2012-01-14  Glenn Morris  <rgm@gnu.org>

	* dired.el (dired-get-filename): Fix 'verbatim case of previous change.

2012-01-13  Alan Mackenzie  <acm@muc.de>

	Fix filling for when filladapt mode is enabled.

	* progmodes/cc-cmds.el (c-fill-paragraph): In the invocation of
	c-mask-paragraph, pass in `fill-paragraph' rather than